@@ -41,7 +41,6 @@ Now we have everything linked together in one place, pointing at the real locati
     >>> ls('parts/omelette/Products')
     d  Product1
     d  Product2
-    -  __init__.py
     >>> ls('parts/omelette/Products/Product1')
     -  __init__.py
     -  in_Product1.txt
@@ -58,7 +57,6 @@ Add a new product and re-run buildout to make sure it updates::
     d  Product1
     d  Product2
     d  Product3
-    -  __init__.py
 
 Make sure we didn't clobber stuff that was linked from outside the omelette directory when we
 reinstalled (we needed to take extra care that this didn't happen when using junction on Windows!)::
